# drf-yaml-schema

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: actions.yml
drf_yaml_schema/: __init__.py  schema.py
sample/: README.md
sample/quickstart/: urls.py  views.py
sample/quickstart/templates/: swagger-ui.html
sample/sample/: asgi.py  settings.py  urls.py  wsgi.py
