[tool.poetry]
name = "drf-yaml-schema"
version = "0.1.0"
description = ""
authors = ["shihono <26952997+shihono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
