[tool.poetry]
name = "drf-yaml-schema"
version = "0.1.0"
description = ""
authors = ["shihono <26952997+shihono@users.noreply.github.com>"]
exclude = ["sample/*"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
djangorestframework = "^3.12.4"
uritemplate = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
